apps/tauri/src-tauri/native/sealed_kernel_bridge.h

typedef struct sealed_kernel_bridge_session sealed_kernel_bridge_session;
int32_t sealed_kernel_bridge_get_ai_ponder_timeout_secs(
    uint64_t* out_secs,
    char** out_error);
int32_t sealed_kernel_bridge_get_ai_embedding_request_timeout_secs(
    uint64_t* out_secs,
    char** out_error);
int32_t sealed_kernel_bridge_get_ai_embedding_cache_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_ai_embedding_concurrency_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_ai_rag_top_note_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_normalize_ai_embedding_text(
    const char* text_utf8,
    uint64_t text_size,
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_compute_ai_embedding_cache_key(
    const char* base_url_utf8,
    uint64_t base_url_size,
    const char* model_utf8,
    uint64_t model_size,
    const char* text_utf8,
    uint64_t text_size,
    char** out_key,
    char** out_error);
int32_t sealed_kernel_bridge_serialize_ai_embedding_blob(
    const float* values,
    uint64_t value_count,
    uint8_t** out_bytes,
    uint64_t* out_size,
    char** out_error);
int32_t sealed_kernel_bridge_parse_ai_embedding_blob(
    const uint8_t* blob,
    uint64_t blob_size,
    float** out_values,
    uint64_t* out_count,
    char** out_error);
int32_t sealed_kernel_bridge_prepare_ai_embedding_refresh_jobs_json(
    sealed_kernel_bridge_session* session,
    const char* ignored_roots_utf8,
    uint64_t limit,
    uint8_t force_refresh,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_prepare_changed_ai_embedding_refresh_jobs_json(
    sealed_kernel_bridge_session* session,
    const char* changed_paths_lf_utf8,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_update_ai_embedding(
    sealed_kernel_bridge_session* session,
    const char* rel_path_utf8,
    const float* values,
    uint64_t value_count,
    char** out_error);
int32_t sealed_kernel_bridge_clear_ai_embeddings(
    sealed_kernel_bridge_session* session,
    char** out_error);
int32_t sealed_kernel_bridge_query_ai_embedding_top_notes_json(
    sealed_kernel_bridge_session* session,
    const float* query_values,
    uint64_t query_value_count,
    const char* exclude_rel_path_utf8,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_build_ai_rag_system_content_text(
    const char* context_utf8,
    uint64_t context_size,
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_build_ai_rag_context_from_note_paths_text(
    const char* const* note_paths_utf8,
    const uint64_t* note_path_sizes,
    const char* const* note_contents_utf8,
    const uint64_t* note_content_sizes,
    uint64_t note_count,
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_get_ai_ponder_system_prompt_text(
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_build_ai_ponder_user_prompt_text(
    const char* topic_utf8,
    uint64_t topic_size,
    const char* context_utf8,
    uint64_t context_size,
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_get_ai_ponder_temperature(
    float* out_temperature,
    char** out_error);
int32_t sealed_kernel_bridge_compute_truth_state_json(
    const char* const* note_ids_utf8,
    const int64_t* active_secs,
    uint64_t activity_count,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_compute_study_streak_days_from_timestamps(
    const int64_t* started_at_epoch_secs,
    uint64_t timestamp_count,
    int64_t today_bucket,
    int64_t* out_streak_days,
    char** out_error);
int32_t sealed_kernel_bridge_compute_study_stats_window(
    int64_t now_epoch_secs,
    int64_t days_back,
    int64_t* out_today_start_epoch_secs,
    int64_t* out_today_bucket,
    int64_t* out_week_start_epoch_secs,
    int64_t* out_daily_window_start_epoch_secs,
    int64_t* out_heatmap_start_epoch_secs,
    uint64_t* out_folder_rank_limit,
    char** out_error);
int32_t sealed_kernel_bridge_build_study_heatmap_grid_json(
    const char* const* dates_utf8,
    const int64_t* active_secs,
    uint64_t day_count,
    int64_t now_epoch_secs,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_generate_mock_retrosynthesis_json(
    const char* target_smiles_utf8,
    uint8_t depth,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_simulate_polymerization_kinetics_json(
    double m0,
    double i0,
    double cta0,
    double kd,
    double kp,
    double kt,
    double ktr,
    double time_max,
    uint64_t steps,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_recalculate_stoichiometry_json(
    const double* mw,
    const double* eq,
    const double* moles,
    const double* mass,
    const double* volume,
    const double* density,
    const uint8_t* has_density,
    const uint8_t* is_reference,
    uint64_t count,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_get_pdf_ink_default_tolerance(
    float* out_tolerance,
    char** out_error);
int32_t sealed_kernel_bridge_compute_pdf_file_lightweight_hash(
    sealed_kernel_bridge_session* session,
    const char* host_path_utf8,
    uint64_t host_path_size,
    char** out_hash,
    char** out_error);
int32_t sealed_kernel_bridge_read_pdf_annotation_json(
    sealed_kernel_bridge_session* session,
    const char* pdf_rel_path_utf8,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_write_pdf_annotation_json(
    sealed_kernel_bridge_session* session,
    const char* pdf_rel_path_utf8,
    const char* json_utf8,
    uint64_t json_size,
    char** out_error);
int32_t sealed_kernel_bridge_smooth_ink_strokes_json(
    const float* xs,
    const float* ys,
    const float* pressures,
    const uint64_t* point_counts,
    const float* stroke_widths,
    uint64_t stroke_count,
    float tolerance,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_build_molecular_preview_json(
    const char* raw_utf8,
    uint64_t raw_size,
    const char* extension_utf8,
    uint64_t max_atoms,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_normalize_molecular_preview_atom_limit(
    uint64_t requested_atoms,
    uint64_t* out_atoms,
    char** out_error);
int32_t sealed_kernel_bridge_get_symmetry_atom_limit(
    uint64_t* out_atoms,
    char** out_error);
int32_t sealed_kernel_bridge_get_crystal_supercell_atom_limit(
    uint64_t* out_atoms,
    char** out_error);
int32_t sealed_kernel_bridge_calculate_symmetry_json(
    const char* raw_utf8,
    uint64_t raw_size,
    const char* format_utf8,
    uint64_t max_atoms,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_build_lattice_from_cif_json(
    const char* raw_utf8,
    uint64_t raw_size,
    uint32_t nx,
    uint32_t ny,
    uint32_t nz,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_calculate_miller_plane_from_cif_json(
    const char* raw_utf8,
    uint64_t raw_size,
    int32_t h,
    int32_t k,
    int32_t l,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_relativize_vault_path_text(
    sealed_kernel_bridge_session* session,
    const char* host_path_utf8,
    uint64_t host_path_size,
    uint8_t allow_empty,
    char** out_text,
    char** out_error);