apps/tauri/src-tauri/src/sealed_kernel/ffi.rs

    pub(super) fn sealed_kernel_bridge_get_ai_ponder_timeout_secs(
        out_secs: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_ai_embedding_request_timeout_secs(
        out_secs: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_ai_embedding_cache_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_ai_embedding_concurrency_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_ai_rag_top_note_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_normalize_ai_embedding_text(
        text_utf8: *const c_char,
        text_size: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_compute_ai_embedding_cache_key(
        base_url_utf8: *const c_char,
        base_url_size: u64,
        model_utf8: *const c_char,
        model_size: u64,
        text_utf8: *const c_char,
        text_size: u64,
        out_key: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    #[cfg(test)]
    pub(super) fn sealed_kernel_bridge_serialize_ai_embedding_blob(
        values: *const c_float,
        value_count: u64,
        out_bytes: *mut *mut u8,
        out_size: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    #[cfg(test)]
    pub(super) fn sealed_kernel_bridge_parse_ai_embedding_blob(
        blob: *const u8,
        blob_size: u64,
        out_values: *mut *mut c_float,
        out_count: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_prepare_ai_embedding_refresh_jobs_json(
        session: *mut SealedKernelBridgeSession,
        ignored_roots_utf8: *const c_char,
        limit: u64,
        force_refresh: u8,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_prepare_changed_ai_embedding_refresh_jobs_json(
        session: *mut SealedKernelBridgeSession,
        changed_paths_lf_utf8: *const c_char,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_update_ai_embedding(
        session: *mut SealedKernelBridgeSession,
        rel_path_utf8: *const c_char,
        values: *const c_float,
        value_count: u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_clear_ai_embeddings(
        session: *mut SealedKernelBridgeSession,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_delete_changed_ai_embedding_notes(
        session: *mut SealedKernelBridgeSession,
        changed_paths_lf_utf8: *const c_char,
        out_deleted_count: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_ai_embedding_top_notes_json(
        session: *mut SealedKernelBridgeSession,
        query_values: *const c_float,
        query_value_count: u64,
        exclude_rel_path_utf8: *const c_char,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_build_ai_rag_system_content_text(
        context_utf8: *const c_char,
        context_size: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    #[cfg(test)]
    pub(super) fn sealed_kernel_bridge_build_ai_rag_context_from_note_paths_text(
        note_paths_utf8: *const *const c_char,
        note_path_sizes: *const u64,
        note_contents_utf8: *const *const c_char,
        note_content_sizes: *const u64,
        note_count: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_build_ai_rag_context_from_changed_note_paths_text(
        session: *mut SealedKernelBridgeSession,
        note_paths_lf_utf8: *const c_char,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_ai_ponder_system_prompt_text(
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_build_ai_ponder_user_prompt_text(
        topic_utf8: *const c_char,
        topic_size: u64,
        context_utf8: *const c_char,
        context_size: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_ai_ponder_temperature(
        out_temperature: *mut f32,
        out_error: *mut *mut c_char,
    ) -> c_int;
    #[cfg(test)]
    pub(super) fn sealed_kernel_bridge_compute_truth_state_json(
        note_ids_utf8: *const *const c_char,
        active_secs: *const i64,
        activity_count: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    #[cfg(test)]
    pub(super) fn sealed_kernel_bridge_compute_study_streak_days_from_timestamps(
        started_at_epoch_secs: *const i64,
        timestamp_count: u64,
        today_bucket: i64,
        out_streak_days: *mut i64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    #[cfg(test)]
    pub(super) fn sealed_kernel_bridge_compute_study_stats_window(
        now_epoch_secs: i64,
        days_back: i64,
        out_today_start_epoch_secs: *mut i64,
        out_today_bucket: *mut i64,
        out_week_start_epoch_secs: *mut i64,
        out_daily_window_start_epoch_secs: *mut i64,
        out_heatmap_start_epoch_secs: *mut i64,
        out_folder_rank_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    #[cfg(test)]
    pub(super) fn sealed_kernel_bridge_build_study_heatmap_grid_json(
        dates_utf8: *const *const c_char,
        active_secs: *const i64,
        day_count: u64,
        now_epoch_secs: i64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_start_study_session(
        session: *mut SealedKernelBridgeSession,
        note_id_utf8: *const c_char,
        folder_utf8: *const c_char,
        out_session_id: *mut i64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_tick_study_session(
        session: *mut SealedKernelBridgeSession,
        session_id: i64,
        active_secs: i64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_end_study_session(
        session: *mut SealedKernelBridgeSession,
        session_id: i64,
        active_secs: i64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_study_stats_json(
        session: *mut SealedKernelBridgeSession,
        now_epoch_secs: i64,
        days_back: i64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_study_truth_state_json(
        session: *mut SealedKernelBridgeSession,
        now_epoch_millis: i64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_study_heatmap_grid_json(
        session: *mut SealedKernelBridgeSession,
        now_epoch_secs: i64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_generate_mock_retrosynthesis_json(
        target_smiles_utf8: *const c_char,
        depth: u8,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_simulate_polymerization_kinetics_json(
        m0: f64,
        i0: f64,
        cta0: f64,
        kd: f64,
        kp: f64,
        kt: f64,
        ktr: f64,
        time_max: f64,
        steps: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_recalculate_stoichiometry_json(
        mw: *const f64,
        eq: *const f64,
        moles: *const f64,
        mass: *const f64,
        volume: *const f64,
        density: *const f64,
        has_density: *const u8,
        is_reference: *const u8,
        count: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_pdf_ink_default_tolerance(
        out_tolerance: *mut f32,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_compute_pdf_file_lightweight_hash(
        session: *mut SealedKernelBridgeSession,
        host_path_utf8: *const c_char,
        host_path_size: u64,
        out_hash: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_read_pdf_annotation_json(
        session: *mut SealedKernelBridgeSession,
        pdf_rel_path_utf8: *const c_char,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_write_pdf_annotation_json(
        session: *mut SealedKernelBridgeSession,
        pdf_rel_path_utf8: *const c_char,
        json_utf8: *const c_char,
        json_size: u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_smooth_ink_strokes_json(
        xs: *const f32,
        ys: *const f32,
        pressures: *const f32,
        point_counts: *const u64,
        stroke_widths: *const f32,
        stroke_count: u64,
        tolerance: f32,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_build_molecular_preview_json(
        raw_utf8: *const c_char,
        raw_size: u64,
        extension_utf8: *const c_char,
        max_atoms: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_normalize_molecular_preview_atom_limit(
        requested_atoms: u64,
        out_atoms: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_symmetry_atom_limit(
        out_atoms: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_crystal_supercell_atom_limit(
        out_atoms: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_calculate_symmetry_json(
        raw_utf8: *const c_char,
        raw_size: u64,
        format_utf8: *const c_char,
        max_atoms: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_build_lattice_from_cif_json(
        raw_utf8: *const c_char,
        raw_size: u64,
        nx: u32,
        ny: u32,
        nz: u32,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_calculate_miller_plane_from_cif_json(
        raw_utf8: *const c_char,
        raw_size: u64,
        h: i32,
        k: i32,
        l: i32,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_relativize_vault_path_text(
        session: *mut SealedKernelBridgeSession,
        host_path_utf8: *const c_char,
        host_path_size: u64,
        allow_empty: u8,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
